--- a/WSUI/MainWindow.xaml
+++ b/WSUI/MainWindow.xaml
@@ -1,14 +1,20 @@
 ﻿<Controls:MetroWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        
-        mc:Ignorable="d"
-    
-    xmlns:cal="http://www.codeplex.com/CompositeWPF"
-    x:Class="WSUI.MainWindow"
-    Title="Windows Search" Height="650" Width="950" MinHeight="450" MinWidth="725" WindowStartupLocation="CenterScreen">
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+
+                      mc:Ignorable="d"
+
+                      xmlns:cal="http://www.codeplex.com/CompositeWPF"
+                      x:Class="WSUI.MainWindow"
+                      Title="Windows Search"
+                      Height="650"
+                      Width="950"
+                      MinHeight="450"
+                      MinWidth="725"
+                      WindowStartupLocation="CenterScreen"
+                      AllowsTransparency="False">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -17,50 +23,51 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />-->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
 
-    <AdornerDecorator>
-        <Grid Margin="7" x:Name="grid">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+    <Grid Margin="7" x:Name="grid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200" />
+            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="2" />
+            <ColumnDefinition Width="0.5*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Row="0" Grid.Column="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200" />
-                <ColumnDefinition Width="0.5*" />
-                <ColumnDefinition Width="2"/>
-                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="0.33*" />
+                <ColumnDefinition Width="0.66*" />
             </Grid.ColumnDefinitions>
-
-            <Grid Grid.Row="0" Grid.Column="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0.33*"></ColumnDefinition>
-                    <ColumnDefinition Width="0.66*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Image Grid.Column="0" RenderOptions.BitmapScalingMode="HighQuality" Source="pack://application:,,,/WSUI;Component/Images/logo_64.png" Stretch="Uniform" StretchDirection="Both"></Image>
-                <Image Grid.Column="1" RenderOptions.BitmapScalingMode="HighQuality" Source="pack://application:,,,/WSUI;Component/Images/logo_txt.png" Stretch="Uniform" StretchDirection="Both"></Image>
-            </Grid>
-
-
-            <ContentControl Grid.Row="0" Grid.Column="1" Margin="4"
-                            cal:RegionManager.RegionName="SearchRegion"/>
-            <ContentControl Grid.Row="1" Grid.Column="0" Margin="4 4 0 4"
-                            cal:RegionManager.RegionName="StrategyRegion" HorizontalAlignment="Stretch"/>
-            <ContentControl Grid.Row="1" Grid.Column="1" Margin="0 4 0 4"
-                            cal:RegionManager.RegionName="DataRegion"/>
-            <ContentControl Grid.Row="1" Grid.Column="3" Margin="0 4 4 4"
-                            cal:RegionManager.RegionName="PreviewRegion"/>
-            <GridSplitter Grid.Row="1"
-                          Grid.Column="2"
-                          Width="2"
-                          HorizontalAlignment="Stretch"
-                          Background="GhostWhite"
-                          ResizeBehavior="PreviousAndNext"
-                          ResizeDirection="Columns" />
-        
+            <Image Grid.Column="0" RenderOptions.BitmapScalingMode="HighQuality"
+                   Source="pack://application:,,,/WSUI;Component/Images/logo_64.png" Stretch="Uniform"
+                   StretchDirection="Both" />
+            <Image Grid.Column="1" RenderOptions.BitmapScalingMode="HighQuality"
+                   Source="pack://application:,,,/WSUI;Component/Images/logo_txt.png" Stretch="Uniform"
+                   StretchDirection="Both" />
         </Grid>
-    </AdornerDecorator>
+
+        <ContentControl Grid.Row="0" Grid.Column="1" Margin="4"
+                        cal:RegionManager.RegionName="SearchRegion" />
+        <ContentControl Grid.Row="1" Grid.Column="0" Margin="4 4 0 4"
+                        cal:RegionManager.RegionName="StrategyRegion" HorizontalAlignment="Stretch" />
+        <ContentControl Grid.Row="1" Grid.Column="1" Margin="0 4 0 4"
+                        cal:RegionManager.RegionName="DataRegion" />
+        <ContentControl Grid.Row="1" Grid.Column="3" Margin="0 4 4 4"
+                        cal:RegionManager.RegionName="PreviewRegion" />
+        <GridSplitter Grid.Row="1"
+                      Grid.Column="2"
+                      Width="2"
+                      HorizontalAlignment="Stretch"
+                      Background="GhostWhite"
+                      ResizeBehavior="PreviousAndNext"
+                      ResizeDirection="Columns" />
+    </Grid>
 </Controls:MetroWindow>
