--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -85,10 +85,10 @@
           <Publish Event="SpawnDialog" Value="CancelDlg">1</Publish>
         </Control>
         <Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="!(loc.InstallDirDlgBannerBitmap)" />
-        <Control Id="Title" Type="Text" Transparent="yes" NoPrefix="yes" Text="Please, enter the email for generating trial key" X="15" Y="6" Width="219" Height="28" />
+        <Control Id="Title" Type="Text" Transparent="yes" NoPrefix="yes" Text="Enter Email" X="15" Y="6" Width="219" Height="28" />
         <Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="0" />
         <Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="0" />
-        <Control Type="Text" Id="EmailLabel" Text="Email:" Width="290" Height="10" X="20" Y="105" />
+        <Control Type="Text" Id="EmailLabel" Text="Please, enter the same email you entered on the website to download the software:" Width="290" Height="10" X="20" Y="105" />
         <Control Id="EmailEdit" Type="Edit" Property="EMAILVALUE" X="20" Y="117" Width="250" Height="16" />
       </Dialog>
       <TextStyle Id="WixUI_Font_Normal" FaceName="Tahoma" Size="8" />
