--- a/WSUI.Core/Utils/Dialog/View/WSUIEmailView.xaml
+++ b/WSUI.Core/Utils/Dialog/View/WSUIEmailView.xaml
@@ -41,7 +41,7 @@
         <Border Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Background="{Binding ValidBrush,UpdateSourceTrigger=PropertyChanged}" Height="2" Margin="5"/>
         
         <TextBlock  Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="4">
-            Please, enter the email for generrating trial key.
+            Please, enter the same email you entered on the website to download the software.
         </TextBlock>
         
     </Grid>
