--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -315,7 +315,7 @@
             <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=ItemUrl,Converter={StaticResource ResourceKey=nameConverter}}" />
             <TextBlock Grid.Column="2" Margin="5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
             <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
-            <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}" />
+            <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
           
           <i:Interaction.Behaviors>
             <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
