--- a/WSUI.Module/View/KindsView.xaml
+++ b/WSUI.Module/View/KindsView.xaml
@@ -11,24 +11,87 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Service/ResourceTemplate.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+
+            <Style x:Key="HorizotalMetroListBox" BasedOn="{StaticResource MetroListBox}" TargetType="{x:Type ListBox}">
+                <Setter Property="ItemsPanel">
+                    <Setter.Value>
+                        <ItemsPanelTemplate>
+                            <WrapPanel IsItemsHost="True"></WrapPanel>
+                        </ItemsPanelTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <SolidColorBrush x:Key="RedColorBrush" Color="Red"></SolidColorBrush>
+            <SolidColorBrush x:Key="DarkRedColorBrush" Color="DarkRed"></SolidColorBrush>
+            <SolidColorBrush x:Key="WhiteColorBrush" Color="White"></SolidColorBrush>
+
+
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-        </Grid.RowDefinitions>        
-        
-        <ListBox Grid.Row="1" Style="{StaticResource MetroListBox}" ItemsSource="{Binding KindsCollection}" Height="Auto"
+        </Grid.RowDefinitions>
+
+
+        <Button x:Name="BackButton" Grid.Column="0" Grid.Row="0" Height="32" Padding="2" Width="32" BorderThickness="0" Focusable="True" 
+                HorizontalAlignment="Center" 
+                HorizontalContentAlignment="Center" 
+                VerticalAlignment="Center" 
+                VerticalContentAlignment="Center"
+                IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}" 
+                IsTabStop="False" 
+                ToolTip="Back" 
+                Command="{Binding BackCommand}">
+            <Grid Background="Transparent" >
+                <Path x:Name="PathCross" Height="32" Width="32" Margin="0,0,0,0" Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" RenderTransformOrigin="0.5,0.5" SnapsToDevicePixels="True" Stretch="Uniform">
+                    <Path.Data>
+                        F1M-800.86,-1379.55L-781.99,-1360.68 -782.125,-1360.54 -792.356,-1360.54 -809.825,-1378.01 -815.075,-1383.26 -792.494,-1405.84 -781.99,-1405.84 -800.86,-1386.97 -751.074,-1386.97 -751.074,-1379.55 -800.86,-1379.55z
+                    </Path.Data>
+                    <Path.RenderTransform>
+                        <TransformGroup>
+                            <TransformGroup.Children>
+                                <ScaleTransform ScaleX="1" ScaleY="1" />
+                            </TransformGroup.Children>
+                        </TransformGroup>
+                    </Path.RenderTransform>
+                </Path>
+            </Grid>
+            <Button.Style>
+                <Style BasedOn="{StaticResource ChromelessButtonStyle}" TargetType="Button">
+                    <Setter Property="Foreground" Value="#FFCCCCCC"></Setter>
+                    <Style.Triggers>
+                        <Trigger Property="Button.IsMouseOver" Value="True">
+                            <Setter Property="Button.Background" Value="{StaticResource RedColorBrush}" />
+                            <Setter Property="Button.Foreground" Value="{StaticResource WhiteColorBrush}" />
+                        </Trigger>
+                        <Trigger Property="Button.IsPressed" Value="True">
+                            <Setter Property="Button.Background" Value="{StaticResource DarkRedColorBrush}" />
+                            <Setter Property="Button.Foreground" Value="{StaticResource WhiteColorBrush}" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+
+        <ListBox Grid.Column="1" Grid.Row="0" Style="{StaticResource HorizotalMetroListBox}" ItemsSource="{Binding KindsCollection}" Height="Auto"
                     SelectedItem="{Binding SelectedLazyKind,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                     ItemContainerStyle="{StaticResource WSUIMetroListBoxItem}"
                     ScrollViewer.VerticalScrollBarVisibility="Auto" 
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                 IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}">
+                 IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
+                 HorizontalAlignment="Right"
+                 >
         </ListBox>
 
-        <Border Grid.Row="2" Visibility="{Binding VisibleTrialLabel,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Margin="5">
+        <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Visibility="{Binding VisibleTrialLabel,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Margin="5">
             <TextBlock Foreground="Red" TextWrapping="Wrap">
                 <Run>You have</Run>
                 <Run Text="{Binding DaysLeft,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Run>
@@ -41,9 +104,9 @@
                 <Hyperlink Command="{Binding BuyCommand}">Purchase</Hyperlink>
             </TextBlock>
         </Border>
-        
-        
-        
+
+
+
     </Grid>
 
 </UserControl>
