return unverified trials

--- a/WSUI.Module/View/KindsView.xaml
+++ b/WSUI.Module/View/KindsView.xaml
@@ -37,8 +37,10 @@
                 <Run>We hope you are enjoying OutlookFinder.</Run>
                 <LineBreak></LineBreak>
                 <Run>Click here to purchase a license.</Run>
+                <!--<LineBreak></LineBreak>
+                <Hyperlink Command="{Binding BuyCommand}">Purchase</Hyperlink>-->
                 <LineBreak></LineBreak>
-                <Hyperlink Command="{Binding BuyCommand}">Purchase</Hyperlink>
+                <Hyperlink Command="{Binding ActivateCommand}">Activate</Hyperlink>
             </TextBlock>
         </Border>
         
