--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -21,7 +21,7 @@
         <Setter Property="Height" Value="16" />
         <Setter Property="Margin" Value="5" />
     </Style>
-    
+
     <Style x:Key="ImageStyleEmail" TargetType="{x:Type Image}" BasedOn="{StaticResource ImageStyle}">
         <Setter Property="Source" Value="..\Images\mail.png"></Setter>
         <Style.Triggers>
@@ -130,8 +130,8 @@
                                     <ColumnDefinition Width="16" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <ToggleButton Style="{StaticResource ExpanderUpHeaderStyle}" x:Name="HeaderSite" Grid.Column="0" Margin="0" Padding="{TemplateBinding Padding}" ContentTemplate="{TemplateBinding HeaderTemplate}" ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}" FontFamily="{TemplateBinding FontFamily}" FontSize="{TemplateBinding FontSize}" FontStretch="{TemplateBinding FontStretch}" FontStyle="{TemplateBinding FontStyle}" FontWeight="{TemplateBinding FontWeight}" Foreground="{TemplateBinding Foreground}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" MinHeight="0" MinWidth="0" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
-                                <Grid Grid.Column="1" HorizontalAlignment="Stretch">
+                                <ToggleButton Style="{StaticResource ExpanderUpHeaderStyle}" x:Name="HeaderSite" Grid.Column="0" Margin="0" Padding="{TemplateBinding Padding}" FontFamily="{TemplateBinding FontFamily}" FontSize="{TemplateBinding FontSize}" FontStretch="{TemplateBinding FontStretch}" FontStyle="{TemplateBinding FontStyle}" FontWeight="{TemplateBinding FontWeight}" Foreground="{TemplateBinding Foreground}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" MinHeight="0" MinWidth="0" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                <!--<Grid Grid.Column="1" HorizontalAlignment="Stretch">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}" />
@@ -140,7 +140,7 @@
                                         <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
 
-                                    <Image Style="{StaticResource ImageStyleEmail}" Grid.Column="0"/>
+                                    <Image Style="{StaticResource ImageStyleEmail}" Grid.Column="0" />
 
                                     <TextBlock Grid.Column="1" Margin="0 3 0 3" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
 
@@ -149,21 +149,22 @@
                                     <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
 
                                     <TextBlock Grid.Column="4" Margin="5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
-                                </Grid>
-                            </Grid>
-                            <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Margin="0" Focusable="false" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Visibility="Collapsed" />
-                        </DockPanel>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsExpanded" Value="true">
-                            <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
-                        </Trigger>
-                        <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
+                                </Grid>-->
+        <ContentControl Grid.Column="1"   ContentTemplate="{TemplateBinding HeaderTemplate}" ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}" ></ContentControl>
+        </Grid>
+        <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Margin="0" Focusable="false" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Visibility="Collapsed" />
+        </DockPanel>
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsExpanded" Value="true">
+                <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+            </Trigger>
+        </ControlTemplate.Triggers>
+        </ControlTemplate>
+        </Setter.Value>
         </Setter>
     </Style>
 
@@ -203,9 +204,9 @@
             <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"></ctrl:HightliteTextBlock>
 
             <TextBlock Grid.Column="4" Margin="5 5 1 5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
-          <i:Interaction.Behaviors>
-            <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
-          </i:Interaction.Behaviors>
+            <i:Interaction.Behaviors>
+                <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
+            </i:Interaction.Behaviors>
         </Grid>
     </DataTemplate>
 
@@ -219,7 +220,7 @@
                     <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
                 </StackPanel>
             </Grid.ToolTip>
-            <Expander Style="{StaticResource EmailExpanderStyle}" Grid.Column="0" Margin="0" ExpandDirection="Down">
+            <Expander Style="{StaticResource EmailExpanderStyle}" HeaderTemplateSelector="" Grid.Column="0" Margin="0" ExpandDirection="Down">
                 <Grid>
                     <ListBox ItemsSource="{Binding Items}" ItemTemplate="{StaticResource EmailItemTemplate}" Style="{StaticResource ListBoxExpanderStyle}">
 
@@ -262,9 +263,9 @@
                     </Style>
                 </ctrl:HightliteHyperlink.Style>
             </ctrl:HightliteHyperlink>
-          <i:Interaction.Behaviors>
-            <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
-          </i:Interaction.Behaviors>
+            <i:Interaction.Behaviors>
+                <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
+            </i:Interaction.Behaviors>
         </Grid>
     </DataTemplate>
 
@@ -289,10 +290,10 @@
             <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
 
             <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}" />
-          
-          <i:Interaction.Behaviors>
-            <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
-          </i:Interaction.Behaviors>
+
+            <i:Interaction.Behaviors>
+                <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
+            </i:Interaction.Behaviors>
         </Grid>
     </DataTemplate>
 
@@ -316,10 +317,10 @@
             <TextBlock Grid.Column="2" Margin="5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
             <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
             <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
-          
-          <i:Interaction.Behaviors>
-            <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
-          </i:Interaction.Behaviors>
+
+            <i:Interaction.Behaviors>
+                <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
+            </i:Interaction.Behaviors>
         </Grid>
     </DataTemplate>
 
@@ -337,10 +338,10 @@
             <TextBlock Grid.Column="2" Margin="5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
             <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
             <TextBlock Grid.Column="4" Margin="5" Foreground="Black" Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}" />
-          
-          <i:Interaction.Behaviors>
-            <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
-          </i:Interaction.Behaviors>
+
+            <i:Interaction.Behaviors>
+                <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
+            </i:Interaction.Behaviors>
         </Grid>
     </DataTemplate>
 
@@ -362,9 +363,9 @@
             <TextBlock Grid.Column="2" Margin="5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
             <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
             <TextBlock Grid.Column="4" Margin="5" Foreground="Black" Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}" />
-          <i:Interaction.Behaviors>
-            <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
-          </i:Interaction.Behaviors>
+            <i:Interaction.Behaviors>
+                <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
+            </i:Interaction.Behaviors>
         </Grid>
     </DataTemplate>
 
@@ -462,16 +463,16 @@
                         <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Margin="{TemplateBinding Padding}" Focusable="false" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Visibility="Collapsed" />
                     </DockPanel>
                     <!--ContentTemplate="{TemplateBinding HeaderTemplate}" ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}"-->
-        <ControlTemplate.Triggers>
-            <Trigger Property="IsExpanded" Value="true">
-                <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
-            </Trigger>
-            <Trigger Property="IsEnabled" Value="false">
-                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
-            </Trigger>
-        </ControlTemplate.Triggers>
-        </ControlTemplate>
-        </Setter.Value>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsExpanded" Value="true">
+                            <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
         </Setter>
     </Style>
 
