--- a/WSUI.Module/View/KindsView.xaml
+++ b/WSUI.Module/View/KindsView.xaml
@@ -91,7 +91,7 @@
                  >
         </ListBox>
 
-        <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Visibility="{Binding VisibleTrialLabel,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Margin="5">
+        <!--<Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Visibility="{Binding VisibleTrialLabel,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Margin="5">
             <TextBlock Foreground="Red" TextWrapping="Wrap">
                 <Run>You have</Run>
                 <Run Text="{Binding DaysLeft,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"></Run>
@@ -103,7 +103,7 @@
                 <LineBreak></LineBreak>
                 <Hyperlink Command="{Binding BuyCommand}">Purchase</Hyperlink>
             </TextBlock>
-        </Border>
+        </Border>-->
 
 
 
