--- a/WSUI.Control/WSSidebarControl.xaml
+++ b/WSUI.Control/WSSidebarControl.xaml
@@ -21,6 +21,22 @@
             <converters:ActivationStatusToGridVisibilityConverter x:Key="GridVisibility"></converters:ActivationStatusToGridVisibilityConverter>
             <converters:ActivationStatusToButtonVisibilityConverter x:Key="ButtonVisibility"></converters:ActivationStatusToButtonVisibilityConverter>
 
+            <Storyboard x:Key="DataToPreview"
+                    TargetProperty="Left"
+                    AccelerationRatio="1"
+                    DecelerationRatio="1"><!--(UIElement.RenderTransform).(TranslateTransform.X)-->
+                <DoubleAnimation x:Name="Data" Storyboard.TargetName="DataControl" Duration="1" />
+                <DoubleAnimation x:Name="Preview" Storyboard.TargetName="PreviewControl" Duration="1" />
+            </Storyboard>
+            
+            <Storyboard x:Key="PreviewToData"
+                    TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
+                    AccelerationRatio="1"
+                    DecelerationRatio="1">
+                <DoubleAnimation x:Name="Data" Storyboard.TargetName="DataControl" Duration="0:0:1" />
+                <DoubleAnimation x:Name="Preview" Storyboard.TargetName="PreviewControl" Duration="0:0:1" /> 
+            </Storyboard>
+            
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -52,9 +68,9 @@
 
                 <ContentControl Grid.Row="1" Margin="4" regions:RegionManager.RegionName="SidebarSearchRegion" />
                 <ContentControl Grid.Row="2" Margin="4 4 0 4" HorizontalAlignment="Stretch" regions:RegionManager.RegionName="SidebarStrategyRegion" />
-                <Grid Grid.Row="3">
-                    <ContentControl Margin="0 4 0 4" regions:RegionManager.RegionName="SidebarDataRegion" Visibility="{Binding DataVisibility,UpdateSourceTrigger=PropertyChanged}"/>
-                    <ContentControl Margin="0 4 4 4" regions:RegionManager.RegionName="SidebarPreviewRegion" Visibility="{Binding PreviewVisibility,UpdateSourceTrigger=PropertyChanged}"/>
+                <Grid Grid.Row="3" x:Name="DataGrid">
+                    <ContentControl  x:Name="DataControl"  regions:RegionManager.RegionName="SidebarDataRegion" Visibility="{Binding DataVisibility,UpdateSourceTrigger=PropertyChanged}"/> <!--Visibility="{Binding DataVisibility,UpdateSourceTrigger=PropertyChanged}"-->
+                    <ContentControl  x:Name="PreviewControl" regions:RegionManager.RegionName="SidebarPreviewRegion" Visibility="{Binding PreviewVisibility,UpdateSourceTrigger=PropertyChanged}"/> <!--Visibility="{Binding PreviewVisibility,UpdateSourceTrigger=PropertyChanged}"-->
                 </Grid>
             </Grid>
         </Border>
