--- a/WSUI.Module/View/PreviewView.xaml
+++ b/WSUI.Module/View/PreviewView.xaml
@@ -1,14 +1,12 @@
 ﻿<UserControl x:Class="WSUI.Module.View.PreviewView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:preview="clr-namespace:WSPreview.PreviewHandler.PreviewHandlerHost;assembly=WSPreview"
-             mc:Ignorable="d" 
-             SizeChanged="MetroContentControl_SizeChanged"
-             
-             >
+             mc:Ignorable="d"
+             SizeChanged="MetroContentControl_SizeChanged">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -24,10 +22,10 @@
         </Grid.RowDefinitions>
 
         <ItemsControl Grid.Row="0" ItemsSource="{Binding Path=Commands,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                      IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 0 0">
+                      IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 0 5">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal" IsItemsHost="True"/>
+                    <StackPanel Orientation="Horizontal" IsItemsHost="True" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
@@ -38,7 +36,7 @@
                                 <Setter Property="Margin" Value="2 0 2 0"></Setter>
                                 <Setter Property="ToolTip" Value="{Binding Tooltip}"></Setter>
                                 <Setter Property="Command" Value="{Binding}"></Setter>
-                                <Setter Property="Foreground" >
+                                <Setter Property="Foreground">
                                     <Setter.Value>
                                         <SolidColorBrush Color="{StaticResource NormalForegroundColor}"></SolidColorBrush>
                                     </Setter.Value>
@@ -51,11 +49,11 @@
                                                     <ColumnDefinition Width="Auto" />
                                                     <ColumnDefinition Width="Auto" />
                                                 </Grid.ColumnDefinitions>
-                                                <Image Source="{Binding Path=Icon}" Width="32" Height="32" MaxHeight="32" MaxWidth="32"
-                                                Grid.Column="0" Stretch="Fill"/>
-                                                                <TextBlock Text="{Binding Path=Caption}" Grid.Column="1" 
-                                                  HorizontalAlignment="Left" 
-                                                   VerticalAlignment="Center" Style="{StaticResource ItemTextBlock}"/>
+                                                <Image Source="{Binding Path=Icon}" Width="20" Height="20" MaxHeight="20" MaxWidth="20"
+                                                Grid.Column="0" Stretch="Fill" />
+                                                <TextBlock Text="{Binding Path=Caption}" Grid.Column="1"
+                                                  HorizontalAlignment="Left"
+                                                   VerticalAlignment="Center" Style="{StaticResource ItemTextBlock}" />
                                             </Grid>
                                         </ControlTemplate>
                                     </Setter.Value>
@@ -75,13 +73,11 @@
                     </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
-            
-            
         </ItemsControl>
-        
-        <WindowsFormsHost Grid.Row="1" >
-            <preview:PreviewHandlerHostControl x:Name="_previewControl" Visible="True" >
-            </preview:PreviewHandlerHostControl >
+
+        <WindowsFormsHost Grid.Row="1">
+            <preview:PreviewHandlerHostControl x:Name="_previewControl" Visible="True">
+            </preview:PreviewHandlerHostControl>
         </WindowsFormsHost>
     </Grid>
 </UserControl>
